# egrpc

./: README.md  pyproject.toml
.github/workflows/: ci.yaml  cla.yaml  publish.yaml
src/egrpc/: __init__.py  compiler.py  decorator.py  entry_point.py  exception.py  grpc_interface.py  instance_ref.py  names.py  proto_interface.py  registry.py  util.py
test/: test_egrpc.py
