[project]
name = "egrpc"
version = "0.1.1"
description = "Eazy gRPC: dynamic protobuf generation from Python type hints"
license = "Apache-2.0"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "grpcio-tools>=1.69.0",
    "grpcio>=1.69.0",
    "multimethod>=2.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "ruff>=0.13.3",
]
