[project]
name = "egrpc"
version = "0.0.2"
description = "Eazy gRPC: dynamic protobuf generation from Python type hints"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]
dependencies = [
    "grpcio-tools>=1.69.0",
    "grpcio>=1.69.0",
    "typing_extensions>=4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "ruff>=0.13.3",
]
